# Pomomo

./: .gitignore  .mcp.json  API_MONITORING.md  CLAUDE.md  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_runner.py
.serena/: project.yml
.serena/memories/: code_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
bot/: analyze_api_logs.py  main.py
bot/cogs/: control.py  info.py  subscribe.py
bot/configs/: bot_enum.py  config.py  help_info.py  logging_config.py  user_messages.py
bot/src/: Settings.py  Stats.py  Timer.py
bot/src/persistence/: __init__.py  session_store.py
bot/src/session/: Session.py  classwork.py  countdown.py  (+6 more)
tests/: conftest.py
tests/integration/: test_full_pomodoro_session.py  test_session_lifecycle.py  test_voice_integration.py
tests/mocks/: discord_mocks.py  voice_mocks.py
tests/performance/: test_long_running_sessions.py  test_memory_usage.py
tests/scenarios/: test_concurrent_access.py  test_error_recovery.py
tests/unit/: test_automute_comprehensive.py  test_basic.py  test_channel_selection_improvement.py  test_concurrent_operations.py  test_control_cog.py  test_info_cog.py  test_network_recovery.py  test_partial_mute_failure.py  test_performance_load.py  test_permission_error_handling.py  test_production_error_scenarios.py  test_server_mute_recovery.py  test_session_logic.py  test_session_persistence.py  test_session_persistence_recovery.py  test_settings_validation_simple.py  test_subscribe_cog.py  test_voice_feature_comprehensive.py
(+9 files in other folders)
